--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<!--navigation-------------------------------->
 	<nav>
 	<!--logo--->
-	<a href="#" class="logo">Bharat Chetry</a>
+	<a href="#" class="logo">Bharat</a>
 	<!--menu--------->
 	<div class="toggle"></div>
 	<ul class="menu">
@@ -43,7 +43,7 @@
 	<!--details--------------->
 	<p class="details">I'm a Full Stack  <strong class="strong-text">Web and Android Developer.</strong>  I have teach around 1500 students.</p>
 	<!--cv button-------------------->
-	<a href="https://www.linkedin.com/in/bharat-chetry-b95a87166/" class="cv-btn">Download Cv</a>
+	<a href="https://www.linkedin.com/in/bharat-chetry-b95a87166/" class="cv-btn"> <strong>Download CV </strong></a>
 	
 		
 	</div>
