--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 	<div class="about-text">
 	<h1>About ME</h1>
 	<h2> Web Developer</h2>
-	<p>Based on your projects, I can develope any types of <font style="border-bottom: 2px solid #958c0d;">Website and Web Application.</font> I give you fully functional website that satisfy you 100% to my work. If you're not satisfy I will work untill you feel better.</p>
+	<p>Hi! I am Bharat Chetry, a web designer/developer focused on crafting great web experiences. Designing and Coding have been my passion since the days I started working with computers but I found myself into web design/development since 2017. I enjoy creating beautifully designed, intuitive and functional websites.
+For over past 2 years, I have worked for some of the best software companies and wonderful clients to create some award winning works. And, <font style="border-bottom: 2px solid #958c0d;">I can make this happen for your business as well.</font> I give you fully functional website that satisfy you 100% to my work. If you're not satisfy I will work untill you feel better.</p>
 	<button>View More Details</button>
 	</div>
 	<!--about-model----------------->
