--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<!--name--->
 	<h1>I'm <font color="#17d1ac">Bharat</font> Chetry</h1>
 	<!--details--------------->
-	<p class="details">I'm a Full Stack <font style="background-color: #00FF00;"> <strong class="strong-text">Web and Android Developer.</strong> </font>   I have teach around 1500 students.</p>
+	<p class="details">I'm a Full Stack <font style="background-color: #FFFF99;"> <strong class="strong-text">Web and Android Developer.</strong> </font>   I have teach around 1500 students.</p>
 	<!--cv button-------------------->
 	<a href="https://www.linkedin.com/in/bharat-chetry-b95a87166/" class="cv-btn"> <strong>Download CV </strong></a>
 	
