--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 	<!--details--------------->
 	<p class="details">I'm a Full Stack <font style="background-color: #0e82cf;"> <strong class="strong-text">Web and Android Developer.</strong> </font> I have teach around 1500 students.</p>
 	<!--cv button-------------------->
-	<br>
+		</div>
+		<br>
+		<div>
 	            <a class="cv" href="https://www.linkedin.com/in/bharat-chetry-b95a87166/">
             <span></span>
             <span></span>
