--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<!--cv button-------------------->
 		</div>
 		<br>
-		<div>
+		<div class="div-hover">
 	            <a class="cv" href="https://www.linkedin.com/in/bharat-chetry-b95a87166/">
             <span></span>
             <span></span>
