--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 	<!--cv button-------------------->
 		</div>
 		<br>
+		<div  class="hover-cv">
 	
 	            <a class="cv" href="https://www.linkedin.com/in/bharat-chetry-b95a87166/">
             <span></span>
@@ -55,6 +56,7 @@ Download CV
 
 
             </a>
+			</div>
 	
 		
 		<!--down arrow-------------->
