--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<!--navigation-------------------------------->
 	<nav>
 	<!--logo--->
-	<a href="#" class="logo">Bharat</a>
+	<a href="#" class="logo">Bharat Chetry</a>
 	<!--menu--------->
 	<div class="toggle"></div>
 	<ul class="menu">
@@ -41,13 +41,10 @@
 	<!--name--->
 	<h1>I'm <font color="#17d1ac">Bharat</font> Chetry</h1>
 	<!--details--------------->
-	<p class="details">I'm a Full Stack <font style="background-color: #0e82cf;"> <strong class="strong-text">Web and Android Developer.</strong> </font> I have teach around 1500 students.</p>
+	<p class="details">I'm a Full Stack <font style="background-color: aquamarine;"> <strong class="strong-text">Web and Android Developer.</strong> </font>   I have teach around 1500 students.</p>
 	<!--cv button-------------------->
-		</div>
-		<br>
-		<div  class="hover-cv">
-	
-	            <a class="cv" href="https://www.linkedin.com/in/bharat-chetry-b95a87166/">
+<br>
+	            <a class="cv" href="#">
             <span></span>
             <span></span>
             <span></span>
@@ -56,9 +53,9 @@ Download CV
 
 
             </a>
-			</div>
 	
 		
+	</div>
 		<!--down arrow-------------->
 	<div class="black-line" ></div>
 	<!--social---------------->
@@ -76,8 +73,7 @@ Download CV
 	<div class="about-text">
 	<h1>About ME</h1>
 	<h2> Web Developer</h2>
-	<p>Hi! I am Bharat Chetry, a web designer/developer focused on crafting great web experiences. Designing and Coding have been my passion since the days I started working with computers but I found myself into web design/development since 2017. I enjoy creating beautifully designed, intuitive and functional websites.
-For over past 2 years, I have worked for some of the best software companies and wonderful clients to create some award winning works. And, <font style="border-bottom: 2px solid #958c0d;">I can make this happen for your business as well.</font> I give you fully functional website that satisfy you 100% to my work. If you're not satisfy I will work untill you feel better.</p>
+	<p>Based on your projects, I can develope any types of <font style="border-bottom: 2px solid #958c0d;">Website and Web Application.</font> I give you fully functional website that satisfy you 100% to my work. If you're not satisfy I will work untill you feel better.</p>
 	<button>View More Details</button>
 	</div>
 	<!--about-model----------------->
