--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<!--navigation-------------------------------->
 	<nav>
 	<!--logo--->
-	<a href="#" class="logo">Bharat Chetry</a>
+	<a href="#" class="logo">Bharat</a>
 	<!--menu--------->
 	<div class="toggle"></div>
 	<ul class="menu">
@@ -41,7 +41,7 @@
 	<!--name--->
 	<h1>I'm <font color="#17d1ac">Bharat</font> Chetry</h1>
 	<!--details--------------->
-	<p class="details">I'm a Full Stack <font style="background-color: aquamarine;"> <strong class="strong-text">Web and Android Developer.</strong> </font>   I have teach around 1500 students.</p>
+	<p class="details">I'm a Full Stack <font style="background-color: aquamarine;"> <strong class="strong-text">Web Developer.</strong> </font> </p>
 	<!--cv button-------------------->
 <br>
 	            <a class="cv" href="#">
