--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<p class="details">I'm a Full Stack <font style="background-color: aquamarine;"> <strong class="strong-text">Web Developer.</strong> </font> </p>
 	<!--cv button-------------------->
 <br>
-	            <a class="cv" href="#">
+	            <a class="cv" href="https://drive.google.com/file/d/1oOeZW1AZqTCnI3qJRPSeb0T_t5PEcS-g/view?usp=sharing">
             <span></span>
             <span></span>
             <span></span>
