--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ Download CV
 	<!--heading-------------->
 	<h1 class="c-b-heading">If You Have  <strong class="strong-for-project">Any Project</strong> In Your Mind ?</h1>
 	<!--btn-------->
-	<a class="con.me" href="https://wa.link/25iffa" >
+	<a class="con-me" href="https://wa.link/25iffa" >
 		<span></span>
 		<span></span>
 		<span></span>
