--- a/index.html
+++ b/index.html
@@ -211,13 +211,7 @@ Download CV
 	<!--heading-------------->
 	<h1 class="c-b-heading">If You Have  <strong class="strong-for-project">Any Project</strong> In Your Mind ?</h1>
 	<!--btn-------->
-	<a id="con-me" href="https://wa.link/25iffa" >
-		<span></span>
-		<span></span>
-		<span></span>
-		<span></span>
-		Contact Me
-		</a>
+	<button class="contact-me"> <a href="https://wa.link/25iffa" >Contact Me</a></button>
 	</section>
 	<!--contact-form------------------->
 	<section id="contact-form">
